[package]
name = "dancing_droid"
version = "0.1.0"
authors = ["Zineddine <zineddine.berrichi@gmail.com>, Jeremie <TODO>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used for parsing because parsing is insane.
# But not mandatory.
nom = "5"
anyhow = "1.0"